--- a/build.gradle
+++ b/build.gradle
@@ -31,5 +31,8 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-mail')
 	compile('org.springframework.boot:spring-boot-starter-log4j2')
 	compile('com.fasterxml.jackson.dataformat:jackson-dataformat-yaml')
+	compile('org.apache.httpcomponents:httpclient')
+	compile('org.apache.httpcomponents:httpcore')
+	compile group: 'com.alibaba', name: 'fastjson', version: '1.2.39'
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
