--- a/build.gradle
+++ b/build.gradle
@@ -24,15 +24,14 @@ repositories {
 
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-aop')
-	compile('org.springframework.boot:spring-boot-starter-web'){
-		exclude group:'org.springframework.boot',module:'spring-boot-starter-tomcat'
-	}
+	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.springframework.boot:spring-boot-starter-freemarker')
 	compile('org.springframework.boot:spring-boot-starter-mail')
 	compile('org.springframework.boot:spring-boot-starter-log4j2')
 	compile('com.fasterxml.jackson.dataformat:jackson-dataformat-yaml')
 	compile('org.apache.httpcomponents:httpclient')
 	compile('org.apache.httpcomponents:httpcore')
+	compile group: 'org.mybatis', name: 'mybatis', version: '3.4.5'
 	compile group: 'com.alibaba', name: 'fastjson', version: '1.2.39'
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
