--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 	compile('org.apache.httpcomponents:httpclient')
 	compile('org.apache.httpcomponents:httpcore')
 	compile group: 'org.mybatis', name: 'mybatis', version: '3.4.5'
+	compile group: 'org.mybatis', name: 'mybatis-spring', version: '1.3.1'
 	compile group: 'com.alibaba', name: 'fastjson', version: '1.2.39'
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
